gem rails_12factor

--- a/config/database.yml
+++ b/config/database.yml
@@ -24,15 +24,17 @@ default: &default
 development:
   <<: *default
   database: todo_mvc_development
+  username: postgres
+  password: 1234
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: todo_mvc
+ 
 
   # The password associated with the postgres role (username).
-  #password:
+  
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -58,6 +60,8 @@ development:
 test:
   <<: *default
   database: todo_mvc_test
+  username: postgres
+  password: 1234
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,5 +85,5 @@ test:
 production:
   <<: *default
   database: todo_mvc_production
-  username: todo_mvc
-  password: <%= ENV['TODO_MVC_DATABASE_PASSWORD'] %>
+  username: postgres
+  password: 1234
